got rid of a selector batch keeping font white on white bg fix in dark mode too

--- a/src/views/DashboardV2/Dashboard.scss
+++ b/src/views/DashboardV2/Dashboard.scss
@@ -15,50 +15,49 @@
 // }
 
 .dashboard {
-		width: 100%;
-		max-width: 1820px;
-		margin: 15px auto;
-		display: flex;
-		padding-left: 20px;
-		padding-right: 20px;
-		height:100%;
-		// margin-bottom: -320px;
+	width: 100%;
+	max-width: 1820px;
+	margin: 15px auto;
+	display: flex;
+	padding-left: 20px;
+	padding-right: 20px;
+	height: 100%;
+	// margin-bottom: -320px;
 
-		.dashboard-body {
-			width: calc(75% - 20px);
-			margin-left: 20px;
-			margin-bottom: 20px;
-		}
-
-		.dashboard-picture-icons,
-		.team-members .member-icons img {
-			width: 40px;
-			margin-left: -6px;
-			&:first-of-type {
-				margin-left: 0;
-			}
-		}
-		.no-picture {
-			background-color: $silver-lining;
-			border-radius: 100%;
-			height: 40px;
-			width: 40px;
-			margin-right: -2px;
-		}
-
-		// .section.dashboard * selector
-		.section[class^='dashboard'] {
-			@include subtleBoxShadowDistance;
-			background: $snow-white;
-			position: relative;
-			z-index: 5;
-			.dashboard-section-inner-container {
-				@include skeleton-section;
-				@include bottomBoxShadow;
-			}
-		}
+	.dashboard-body {
+		width: calc(75% - 20px);
+		margin-left: 20px;
+		margin-bottom: 20px;
 	}
 
+	.dashboard-picture-icons,
+	.team-members .member-icons img {
+		width: 40px;
+		margin-left: -6px;
+		&:first-of-type {
+			margin-left: 0;
+		}
+	}
+	.no-picture {
+		background-color: $silver-lining;
+		border-radius: 100%;
+		height: 40px;
+		width: 40px;
+		margin-right: -2px;
+	}
+
+	// .section.dashboard * selector
+	.section[class^='dashboard'] {
+		@include subtleBoxShadowDistance;
+		background: $snow-white;
+		position: relative;
+		z-index: 5;
+		.dashboard-section-inner-container {
+			@include skeleton-section;
+			@include bottomBoxShadow;
+		}
+	}
+}
 
 .dark-mode {
 	.dashboard {
@@ -74,13 +73,7 @@
 			}
 		}
 		hr {
-		  border-top-color: rgba(255, 255, 255, 0.18);
+			border-top-color: rgba(255, 255, 255, 0.18);
 		}
-	}
-}
-
-.dashboard-stats{
-	.a-container p{
-		color:$snow-white;
 	}
 }
